examples/networkservices/gateway.yaml
# SPDX-FileCopyrightText: 2025 The Crossplane Authors <https://crossplane.io>
#
# SPDX-License-Identifier: CC0-1.0

apiVersion: networkservices.gcp.upbound.io/v1beta1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: networkservices/v1beta1/gateway
  labels:
    testing.upbound.io/example-name: uptest
  name: uptest
spec:
  forProvider:
    addresses:
    - "10.128.0.99"
    location: us-central1
    ports:
    - 443
    scope: default-scope-basic
    type: SECURE_WEB_GATEWAY
    networkSelector:
      matchLabels:
        testing.upbound.io/example-name: gateway
    subnetworkSelector:
      matchLabels:
        testing.upbound.io/example-name: default
    deleteSwgAutogenRouterOnDestroy: true
